cli/tests/testdata/check/node_builtin_modules/mod.js
// @ts-check
import fs from "node:fs";
const data = fs.readFileSync("./node_builtin.js", 123);
